# recipebox_API

./: README.md  pyproject.toml
backend/: alembic.ini  main.py  run_db.py
backend/alembic/: README
backend/alembic/versions/: 08b8cf394a98_create_recipebox_api.py  14db800121db_create_tables.py  328e50e2f66b_create_tables.py  5368967306a3_updated_models.py  a8d9a648bd2c_create_recipebox_api.py  b5e8fe25850a_updated_models.py  c0045c34d2c3_create_tables.py  d8f75ef04ee5_add_recipemodel_in_schemas.py
backend/app/api/: api.py
backend/app/api/endpoints/: ingredient.py  recipe.py  recipe_ingredient.py
backend/app/core/: config.py
backend/app/crud/: ingredient.py  recipe.py  recipe_ingredient.py  user.py
backend/app/db/: init_db.py  init_recipe_ingredient.py
backend/app/models/: ingredient.py  recipe.py  recipe_ingredient.py  role.py  user.py
backend/app/schemas/: ingredient.py  recipe.py  recipe_ingredient.py  user.py
